Work in progress.

--- a/less/essential.less
+++ b/less/essential.less
@@ -66,8 +66,6 @@
 @import "moodle/expendable";
 
 // Essential styles
-// Import the essential variables
-@import "essential/variables";
 // Start with core
 @import "essential/core";
 // Import the essential styles
@@ -93,6 +91,7 @@
 @import "essential/navigation";
 @import "essential/plugins";
 @import "essential/quiz";
+@import "essential/scaffolding";
 @import "essential/tabs";
 // Load as last for potential overwrites
 @import "essential/print";
