--- a/less/essential/settings/course.less
+++ b/less/essential/settings/course.less
@@ -1,5 +1,11 @@
 /* @group Course */
 
+.listitem-category {
+  .icon {
+    color: @icon-colour;
+  }
+}
+
 /* @group Course Footer */
 
 .section-navigation {
