--- a/less/moodle-rtl.less
+++ b/less/moodle-rtl.less
@@ -14,6 +14,7 @@
 @import "moodle/rtl/expendable";
 @import "moodle/rtl/filemanager";
 @import "moodle/rtl/forms";
+@import "moodle/rtl/modules";
 @import "moodle/rtl/question";
 @import "moodle/rtl/reports";
 @import "moodle/rtl/responsive";
