--- a/less/moodle/course.less
+++ b/less/moodle/course.less
@@ -283,7 +283,7 @@
 }
 
 .course-content ul.topics li.section {
-  padding-bottom: 20px;
+  padding-bottom: 20px !important;  // Override format_topics style sheet.
 }
 
 .course-content ul.topics li.section .summary {
