--- a/style/settings.css
+++ b/style/settings.css
@@ -4,6 +4,12 @@
  * @license     http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 /* @group Blocks */
+.block .icon {
+  color: [[setting:themeiconcolor]];
+}
+.block .moodle-core-dragdrop-draghandle:before {
+  color: [[setting:themeiconcolor]];
+}
 .block .menu a.menu-action {
   color: [[setting:themeurlcolor]];
 }
@@ -14,6 +20,176 @@
 .block h3.main {
   color: [[setting:themetextcolor]];
 }
+.tree_item.branch.branch:before {
+  color: [[setting:themeiconcolor]];
+}
+.tree_item.branch.emptybranch:before {
+  color: [[setting:themeiconcolor]];
+}
+.collapsed .tree_item.branch:before {
+  color: [[setting:themeiconcolor]];
+}
+/* @group Block Icons */
+.block_news_items .header .title h2:before {
+  content: "\f0a1";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_navigation .header .title h2:before {
+  content: "\f0e8";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_calendar_upcoming .header .title h2:before,
+.block_calendar_month .header .title h2:before {
+  content: "\f073";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_course_list .header .title h2:before {
+  content: "\f108";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_completionstatus .header .title h2:before,
+.block_selfcompletion .header .title h2:before {
+  content: "\f0e4";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_blog_menu .header .title h2:before {
+  content: "\f02d";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_quiz_results .header .title h2:before {
+  content: "\f080";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_quiz_navblock .header .title h2:before {
+  content: "\f126";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_glossary_random .header .title h2:before {
+  content: "\f0eb";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_book_toc .header .title h2:before {
+  content: "\f02d";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_participants .header .title h2:before,
+.block_online_users .header .title h2:before {
+  content: "\f0c0";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_html .header .title h2:before {
+  content: "\f022";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_section_links .header .title h2:before {
+  content: "\f02e";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_activity_modules .header .title h2:before {
+  content: "\f12e";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_comments .header .title h2:before {
+  content: "\f075";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_settings .header .title h2:before {
+  content: "\f085";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_admin_bookmarks .header .title h2:before {
+  content: "\f02e";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_blog_tags .header .title h2:before,
+.block_tags .header .title h2:before {
+  content: "\f02c";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_private_files .header .title h2:before {
+  content: "\f114";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_block_mentees .header .title h2:before {
+  content: "\f0c0";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_messages .header .title h2:before {
+  content: "\f0e0";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_community .header .title h2:before {
+  content: "\f0ac";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_recent_activity .header .title h2:before {
+  content: "\f017";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_search_forums .header .title h2:before {
+  content: "\f0e6";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_myprofile .header .title h2:before {
+  content: "\f007";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_adminblock .header .title h2:before {
+  content: "\f009";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_feedback .header .title h2:before {
+  content: "\f087";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_flickr .header .title h2:before {
+  content: "\f03e";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_youtube .header .title h2:before {
+  content: "\f145";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_course_badges .header .title h2:before {
+  content: "\f091";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+.block_twitter_search .header .title h2:before {
+  content: "\f099";
+  color: [[setting:themeiconcolor]];
+  font-family: FontAwesome;
+}
+/* @end */
 /* @end */
 /* @group Breadcrumb Button */
 .breadcrumb-button input[type="submit"] {
@@ -119,6 +295,9 @@
 }
 /* @end */
 /* @group Course */
+.listitem-category .icon {
+  color: [[setting:themeiconcolor]];
+}
 /* @group Course Footer */
 .section-navigation {
   color: [[setting:themetextcolor]];
@@ -151,11 +330,20 @@ body.has_dock #dock .dockedtitle[disabled] {
 }
 /* @end */
 /* @group Edit Buttons */
+.menu a.menu-action > i,
+p.tree_item.leaf a > i,
+.course-item-actions a > i,
+.actions a > i {
+  color: [[setting:themeiconcolor]];
+}
 .menu a.menu-action:hover > i,
 p.tree_item.leaf a:hover > i,
 .course-item-actions a:hover > i,
 .actions a:hover > i {
   color: [[setting:themehovercolor]];
+}
+.section-modchooser-link > a:before {
+  color: [[setting:themeiconcolor]];
 }
 /* @end */
 /* @group Forms */
