Work in progress.

--- a/less/essential/responsive.less
+++ b/less/essential/responsive.less
@@ -161,6 +161,7 @@
     }
     .icon-collapse {
       overflow: hidden;
+      margin-top: 34px;
       margin-right: 10px;
       float: right;
     }
