--- a/style/essential.css
+++ b/style/essential.css
@@ -18005,6 +18005,7 @@ ul.socials li {
   }
   #page-header .icon-collapse {
     overflow: hidden;
+    margin-top: 34px;
     margin-right: 10px;
     float: right;
   }
