Work in progress.

--- a/less/essential/blocks.less
+++ b/less/essential/blocks.less
@@ -82,7 +82,7 @@
 
 .collapsed .tree_item.branch:before {
   font-family: FontAwesome;
-  content: "\f07b";
+  /*@replace: "\f053"*/content: "\f07b";
   margin-right: 5px;
 }
 
