--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -97,7 +97,7 @@
       .fa-caret-right:before {
         margin-left: 5px;
         margin-right: 3px;
-        content: "\f0da";
+        /*@replace: "\f0d9"*/content: "\f0da";
       }
       &:hover {
         background-image: none;
