--- a/less/settings.less
+++ b/less/settings.less
@@ -9,6 +9,7 @@
 @import "essential/settings/breadcrumb";
 @import "essential/settings/carousel";
 @import "essential/settings/categories";
+@import "essential/settings/core";
 @import "essential/settings/course";
 @import "essential/settings/dock";
 @import "essential/settings/editicons";
