Work in progress.

--- a/less/essential/settings/theme-admin.less
+++ b/less/essential/settings/theme-admin.less
@@ -177,7 +177,7 @@ a.marketing-button:hover {
     color: ~"[[setting:themehovercolor]]";
   }
   .header .title h2:before {
-    color: ~"[[setting:themecolor]]";
+    color: ~"[[setting:themeiconcolor]]";
   }
 }
 
