--- a/less/essential/course.less
+++ b/less/essential/course.less
@@ -21,6 +21,10 @@ div.mdl-align.title {
 body {  // Inside a body tag so will be more specific and override core plugin styles that come afterwards without the use of 'important' and can then override again in pre-processed theme setting style if needed.
     .course-content ul.topics li.section {
         padding-bottom: 20px;
+        .content {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
     }
 }
 
