Some minor fixed for RTL feature, mainly gruntfile and obsolete preg_replace.
Conflicts:
	style/alternative.css

--- a/less/essential/settings/theme-admin.less
+++ b/less/essential/settings/theme-admin.less
@@ -348,7 +348,7 @@ a.marketing-button:hover {
   border-color: ~"[[setting:themeiconcolor]]";
   var {
     background-color: ~"[[setting:themecolor]]";
-    color: ~"[[setting:themetextcolor]]";
+    color: ~"[[setting:themenavcolor]]";
   }
   h2 {
     color: ~"[[setting:themetextcolor]]";
