Intelligent file serving and local caching.
Conflicts:
	less/essential/alternative/alternative1.less
	less/essential/alternative/alternative2.less
	less/essential/alternative/alternative3.less

--- a/less/essential/alternative/alternative1.less
+++ b/less/essential/alternative/alternative1.less
@@ -335,15 +335,15 @@
     border-color: ~"[[setting:themeiconcolor]]";
     var {
       background-color: ~"[[setting:alternativethemecolor1]]";
-      color: ~"[[setting:alternativethemetextcolor1]]";
+      color: ~"[[setting:themenavcolor]]";
     }
     h2 {
       color: ~"[[setting:alternativethemetextcolor1]]";
       border-bottom-color: ~"[[setting:themeiconcolor]]";
       &:before {
         color: ~"[[setting:themeiconcolor]]";
-      }
     }
+  }
     span {
       color: ~"[[setting:alternativethemetextcolor1]]";
     }
