--- a/less/essential/alternative/alternative2.less
+++ b/less/essential/alternative/alternative2.less
@@ -335,15 +335,15 @@
     border-color: ~"[[setting:themeiconcolor]]";
     var {
       background-color: ~"[[setting:alternativethemecolor2]]";
-      color: ~"[[setting:alternativethemetextcolor2]]";
+      color: ~"[[setting:themenavcolor]]";
     }
     h2 {
       color: ~"[[setting:alternativethemetextcolor2]]";
       border-bottom-color: ~"[[setting:themeiconcolor]]";
       &:before {
         color: ~"[[setting:themeiconcolor]]";
-      }
     }
+  }
     span {
       color: ~"[[setting:alternativethemetextcolor2]]";
     }
