--- a/style/alternative.css
+++ b/style/alternative.css
@@ -311,7 +311,7 @@
 }
 .essential-colours-alternative1 .performanceinfo var {
   background: [[setting:alternativethemecolor1]];
-  color: [[setting:alternativethemetextcolor1]];
+  color: [[setting:themenavcolor]];
 }
 .essential-colours-alternative1 .performanceinfo h2:before {
   color: [[setting:alternativethemecolor1]];
@@ -718,7 +718,7 @@
 }
 .essential-colours-alternative2 .performanceinfo var {
   background: [[setting:alternativethemecolor2]];
-  color: [[setting:alternativethemetextcolor2]];
+  color: [[setting:themenavcolor]];
 }
 .essential-colours-alternative2 .performanceinfo h2:before {
   color: [[setting:alternativethemecolor2]];
@@ -1125,7 +1125,7 @@
 }
 .essential-colours-alternative3 .performanceinfo var {
   background: [[setting:alternativethemecolor3]];
-  color: [[setting:alternativethemetextcolor3]];
+  color: [[setting:themenavcolor]];
 }
 .essential-colours-alternative3 .performanceinfo h2:before {
   color: [[setting:alternativethemecolor3]];
