--- a/less/essential/alternative/alternative3.less
+++ b/less/essential/alternative/alternative3.less
@@ -335,15 +335,15 @@
     border-color: ~"[[setting:themeiconcolor]]";
     var {
       background-color: ~"[[setting:alternativethemecolor3]]";
-      color: ~"[[setting:alternativethemetextcolor3]]";
+      color: ~"[[setting:themenavcolor]]";
     }
     h2 {
       color: ~"[[setting:alternativethemetextcolor3]]";
       border-bottom-color: ~"[[setting:themeiconcolor]]";
       &:before {
         color: ~"[[setting:themeiconcolor]]";
-      }
     }
+  }
     span {
       color: ~"[[setting:alternativethemetextcolor3]]";
     }
