Fixed calendar block and navigation menu drop downs.

--- a/less/essential/blocks.less
+++ b/less/essential/blocks.less
@@ -180,6 +180,14 @@
   }
 }
 
+/* @group Calendar Block */
+.block .minicalendar {
+    th, td {
+        word-break: break-word;
+    }
+}
+/* @end */
+
 /* @group Logged in User Block */
 .block_myprofile {
   .content {
