--- a/style/essential-rtl.css
+++ b/style/essential-rtl.css
@@ -18742,6 +18742,15 @@ body .chooserdialogue .moodle-dialogue-wrap .moodle-dialogue-bd {
   color: #fff;
 }
 
+/* @group Calendar Block */
+
+.block .minicalendar th,
+.block .minicalendar td {
+  word-break: break-word;
+}
+
+/* @end */
+
 /* @group Logged in User Block */
 
 .block_myprofile .content {
