--- a/less/essential/settings/breadcrumb.less
+++ b/less/essential/settings/breadcrumb.less
@@ -53,31 +53,32 @@
       }
     }
   }
+}
 
 .dir-rtl .breadcrumb-nav {
   ul.breadcrumb.style1 {
     li:after {
       border-right-color: ~"[[setting:themecolor]]";
-      border-left-color: transparent;
+    }
+    li:hover:after {
+      border-right-color: ~"[[setting:themenavcolor]]";
     }
   }
 }
 /* @end */
 
-  /* @group Breadcrumb Style Simple */
-
-  ul.breadcrumb.style2 {
-    li {
-      a {
-        color: ~"[[setting:themetextcolor]]";
-      }
-      a:hover {
-        color: ~"[[setting:themehovercolor]]";
-      }
+/* @group Breadcrumb Style Simple */
+ul.breadcrumb.style2 {
+  li {
+    a {
+      color: ~"[[setting:themetextcolor]]";
+    }
+    a:hover {
+      color: ~"[[setting:themehovercolor]]";
     }
   }
-
-  /* @end */
 }
+
+/* @end */
 
 /* @end */
