--- a/style/settings.css
+++ b/style/settings.css
@@ -32,161 +32,130 @@
 /* @group Block Icons */
 .block_news_items .header .title h2:before {
   content: "\f0a1";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_navigation .header .title h2:before {
   content: "\f0e8";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_calendar_upcoming .header .title h2:before,
 .block_calendar_month .header .title h2:before {
   content: "\f073";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_course_list .header .title h2:before {
   content: "\f108";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_completionstatus .header .title h2:before,
 .block_selfcompletion .header .title h2:before {
   content: "\f0e4";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_blog_menu .header .title h2:before {
   content: "\f02d";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_quiz_results .header .title h2:before {
   content: "\f080";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_quiz_navblock .header .title h2:before {
   content: "\f126";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_glossary_random .header .title h2:before {
   content: "\f0eb";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_book_toc .header .title h2:before {
   content: "\f02d";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_participants .header .title h2:before,
 .block_online_users .header .title h2:before {
   content: "\f0c0";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_html .header .title h2:before {
   content: "\f022";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_section_links .header .title h2:before {
   content: "\f02e";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_activity_modules .header .title h2:before {
   content: "\f12e";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_comments .header .title h2:before {
   content: "\f075";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_settings .header .title h2:before {
   content: "\f085";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_admin_bookmarks .header .title h2:before {
   content: "\f02e";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_blog_tags .header .title h2:before,
 .block_tags .header .title h2:before {
   content: "\f02c";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_private_files .header .title h2:before {
   content: "\f114";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_block_mentees .header .title h2:before {
   content: "\f0c0";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_messages .header .title h2:before {
   content: "\f0e0";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_community .header .title h2:before {
   content: "\f0ac";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_recent_activity .header .title h2:before {
   content: "\f017";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_search_forums .header .title h2:before {
   content: "\f0e6";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_myprofile .header .title h2:before {
   content: "\f007";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_adminblock .header .title h2:before {
   content: "\f009";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_feedback .header .title h2:before {
   content: "\f087";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_flickr .header .title h2:before {
   content: "\f03e";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_youtube .header .title h2:before {
   content: "\f145";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_course_badges .header .title h2:before {
   content: "\f091";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 .block_twitter_search .header .title h2:before {
   content: "\f099";
-  color: [[setting:themeiconcolor]];
   font-family: FontAwesome;
 }
 /* @end */
@@ -204,9 +173,6 @@
 /* @group Breadcrumb */
 .breadcrumb-nav {
   /* @group Breadcrumb Style Fancy */
-  /* @end */
-  /* @group Breadcrumb Style Simple */
-  /* @end */
 }
 .breadcrumb-nav ul.breadcrumb.style1 li {
   color: [[setting:themenavcolor]];
@@ -237,16 +203,21 @@
 .breadcrumb-nav ul.breadcrumb.style1 li:hover:after a {
   color: [[setting:themecolor]];
 }
-.breadcrumb-nav .dir-rtl .breadcrumb-nav ul.breadcrumb.style1 li:after {
+.dir-rtl .breadcrumb-nav ul.breadcrumb.style1 li:after {
   border-right-color: [[setting:themecolor]];
-  border-left-color: transparent;
 }
-.breadcrumb-nav ul.breadcrumb.style2 li a {
+.dir-rtl .breadcrumb-nav ul.breadcrumb.style1 li:hover:after {
+  border-right-color: [[setting:themenavcolor]];
+}
+/* @end */
+/* @group Breadcrumb Style Simple */
+ul.breadcrumb.style2 li a {
   color: [[setting:themetextcolor]];
 }
-.breadcrumb-nav ul.breadcrumb.style2 li a:hover {
+ul.breadcrumb.style2 li a:hover {
   color: [[setting:themehovercolor]];
 }
+/* @end */
 /* @end */
 /* @group Carousel */
 #essentialCarousel.carousel .carousel-inner > .item > .carousel-image {
@@ -831,12 +802,32 @@ a.marketing-button:hover {
 }
 /* @end */
 /* @group Performance Information */
+.performanceinfo {
+  border-color: [[setting:themeiconcolor]];
+}
 .performanceinfo var {
   background-color: [[setting:themecolor]];
   color: [[setting:themenavcolor]];
 }
+.performanceinfo h2 {
+  color: [[setting:themetextcolor]];
+  border-bottom-color: [[setting:themeiconcolor]];
+}
 .performanceinfo h2:before {
-  color: [[setting:themecolor]];
+  color: [[setting:themeiconcolor]];
+}
+.performanceinfo span {
+  color: [[setting:themetextcolor]];
+}
+.performanceinfo #cache:before,
+.performanceinfo #load:before,
+.performanceinfo #memory:before,
+.performanceinfo #peakmemory:before,
+.performanceinfo #session:before,
+.performanceinfo #included:before,
+.performanceinfo #dbqueries:before,
+.performanceinfo #dbtime:before {
+  color: [[setting:themeiconcolor]];
 }
 /* @end */
 /* @group Quiz */
